07Nov02=======================================================================
1. allow three digit longitudes
2. make a small change to see if messages now stay in place.
3. make keep actually stick over a reboot and take it fully into account for
deletions (translators: I added m18).
4. try not to delete new messages (even if this is an update that reads 'old'
messages with missing fields).
29Oct02=======================================================================
1. make sh/log et al a bit more efficient.
2. fix dupe message in dx.
3. update cty.dat to the latest, add k8T, K8O to KH8 and TX5BTY to FO/A
4. clear cache on reload of prefixes
25Oct02=======================================================================
1. remove the dupefile automatically if it becomes corrupted
2. instrument the startup slightly more
21Oct02=======================================================================
1. Fix msg aging.
2. make the default pinginterval and obscount variable (set/var 
$DXProt::pingint and $DXProt::obscount) 
20Oct02=======================================================================
1. remove dupe check on local sysop announces
2. fix format errors on sh/muf for 5.8.0
3. add new version of the administration manual that includes WinCVS with
thanks to K1XX (g0vgs).
17Oct02=======================================================================
1. added new Spanish files for help and Messages from Angel, EA7WA.
16Oct02=======================================================================
1. decrease the default max length of PC16/19 to around 180 characters to be
slightly friendlier to ARC, which seems to have a difficulty reconstructing
lines from multiple packets. Also make the value settable via set/var.
2. strip off blank spaces from the ends of lines of  command output.
15Oct02=======================================================================
1. made some detail changes to the raw USDB data and the routines that 