@@ -1,3 +1,5 @@
+08Nov02=======================================================================
+1. made some small mods to grepdbg and spot2csv.pl
 07Nov02=======================================================================
 1. allow three digit longitudes
 2. make a small change to see if messages now stay in place.
